--- a/frontendVue/src/assets/styles/base.scss
+++ b/frontendVue/src/assets/styles/base.scss
@@ -33,16 +33,16 @@ body {
   font-weight: 300;
   font-family: 'Lato', sans-serif;
   color: #777;
-  padding: .5rem;
+  // padding: .5rem;
   min-height: 100vh;
   display: flex;
   flex-direction: column;
 
-  @include respond(md) {
-    padding: 2rem;
-  }
+  // @include respond(md) {
+  // padding: 2rem;
+  // }
 
-  @include respond(lg) {
-    padding: 3rem;
-  }
+  // @include respond(lg) {
+  // padding: 3rem;
+  // }
 }
